--- a/project.html
+++ b/project.html
@@ -1,19 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PROJECT CLICK</title>
-    <link rel="stylesheet" type="text/css" href="project.css">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="CSS/first.css" />
+    <title> First with Button</title>
 </head>
 <body>
-    <img src="nepal.jpg" class="nepal-map">
-    <h1 class="information">Here</h1>
+
+    <header class="header">
+        <div class="h1-main">
+            <h1>
+                <span class="h1-primary">TOBLERONE</span>
+                <span class="h1-secondary">TASTE SEVEN HEAVENS</span>
+            </h1>
+
+            <a href="#" class="button btn-animation">BUY HERE</a>
+
+        </div>
+    </header>
+
+    <div class="title-text">
+        THIS IS TITLE-TEXT CLASS
+    </div>
+
+    <section class="grid">
+        <div class="row">
+            <div class="col-1-by-2">
+                lorem this is random text
+            </div>
+            <div class="col-1-by-2">
+                lorem so is this
+            </div>
+
+        </div>
+    </section>
+
     
 
 
-    <script src="project.js"></script>
-    
 </body>
 </html>
